# Fluctuating-CMs-LBM

Kokkos/: CMakeLists.txt  README.md
Kokkos/include/: VTIWriter2D.h  VTKWriter.h  VTKWriter2D.h
Kokkos/src/2D/: D2Q9_BGK_Fluct_Tests.cpp  D2Q9_CMS_Fluct_Tests.cpp  D2Q9_Reg_Fluct_Tests.cpp
Kokkos/src/2D/Old/: test_equilibrium_equipartition.cpp  test_kbt_scaling.cpp  test_rho_scaling.cpp  test_zero_noise_regression.cpp
Kokkos/src/3D/Q27/: D3Q27_BGK_Fluct_Tests.cpp  D3Q27_CMS_Fluct_Tests.cpp
Matlab/: D2Q9_CentralMoments.m  D3Q19_CentralMoments.m  D3Q27_CentralMoments.m
TESTS/Test2/: Test2-inc.eps  Test2.tex  Test2_Full-inc.eps  Test2_Full.tex  error.txt  plot.gnu
TESTS/Test3/: Test3-inc.eps  Test3.tex  equipartition.txt  plot.gnu
TESTS/Test4/: Test4-inc.eps  Test4.tex  plot.gnu  test4.txt
TESTS/Test5/: Test5-inc.eps  Test5.tex  plot.gnu  test5.txt
TESTS/Test6/: Test6-inc.eps  Test6.tex  Test6_zoom-inc.eps  Test6_zoom.tex  plot.gnu  plot2.gnu  test6.txt  test6BGK.txt
TESTS/Test7/: Test7-Case1-inc.eps  Test7-Case1.tex  Test7-Case2-inc.eps  Test7-Case2.tex  Test7-Case3-inc.eps  Test7-Case3.tex  Test7-Case4-inc.eps  Test7-Case4.tex  case1.txt  case2.txt  case3.txt  case4.txt  compute_errors.m  histo.m  plot.gnu  plot2.gnu  plot3.gnu  vel.txt  vel_pdf-inc.eps  vel_pdf.tex  vel_pdf_hist-inc.eps  vel_pdf_hist.tex
